--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
+    "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "next": "12.1.6",
     "react": "18.1.0",
